--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mongodb+srv://enes:enes@cluster0.z35ait5.mongodb.net/
+DATABASE_URL=mongodb+srv://<password>:enes@cluster0.z35ait5.mongodb.net/
